--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "lib": [
             "es2020"
         ],
+        "declaration": true,
         "moduleResolution": "NodeNext",
         "allowSyntheticDefaultImports": true,
         "strict": true,
