--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Eric Blade <blade.eric@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/webos-service": "^0.4.6",
